--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--Link to CSS-->
     <link rel="stylesheet" href="style.css">
     <!--Link to fontawesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6/css/all.css" crossorigin="anonymous">
 </head>
 <body>
     
