link to google style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <!--Link to fontawesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6/css/all.css" crossorigin="anonymous">
+    <!--Link to Google style-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 </head>
 <body>
     
