--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="calendar">
+            
+        </div>
     </div>
 </body>
 </html>
