--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <div class="container">
         <div class="calendar">
-            
+            <div class="month">
+                
+            </div>
         </div>
     </div>
 </body>
