class for preview angle

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="calendar">
             <div class="month">
-                
+                <i class="fas fa-andle-left prev"></i>
             </div>
         </div>
     </div>
