--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="calendar">
             <div class="month">
                 <i class="fas fa-andle-left prev"></i>
+                <div class="date">
+                    
+                </div>
             </div>
         </div>
     </div>
