class for right angle

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             <div class="month">
                 <i class="fas fa-andle-left prev"></i>
                 <div class="date">
-                    
+                    <h1></h1>
+                    <p></p>
                 </div>
+                <i class="fas fa-angle-right next"></i>
             </div>
         </div>
     </div>
