class for weekdays

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 </div>
                 <i class="fas fa-angle-right next"></i>
             </div>
+            <div class="weekdays">
+                
+            </div>
         </div>
     </div>
 </body>
