--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <div>Fri</div>
                 <div>Sat</div>
             </div>
+            <div class="days"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
